[gd_scene load_steps=9 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://primeira_tela.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="startScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -34.0
margin_right = 70.0
margin_bottom = 34.0

[node name="startBtn" type="Button" parent="controls"]
margin_right = 140.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.741176, 0.976471, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.976471, 0, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="controlBtn" type="Button" parent="controls"]
margin_top = 24.0
margin_right = 140.0
margin_bottom = 44.0
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.741176, 0.976471, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.976471, 0, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Control"

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 48.0
margin_right = 140.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../startBtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.741176, 0.976471, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.976471, 0, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Quit"

[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/controlBtn" to="." method="_on_controlBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
